--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --upgrade pip && pip3 install --user -r summary/requirements.txt",
+	"postCreateCommand": "pip3 install --upgrade pip && pip3 install --user -r web_sample/requirements.txt",
 	"customizations": {
 		"vscode": {
 			"extensions": [
